# human_aware_navigation

./: Doxyfile  LICENSE  README.md  mainpage.dox
doc/: howto
dynamic_social_costmap/: CMakeLists.txt  package.xml  social_layer_plugin.xml
dynamic_social_costmap/include/dynamic_social_costmap/: dynamic_social_layers.h
dynamic_social_costmap/src/: dynamic_social_layers.cpp
human_aware_nav_launch/: CMakeLists.txt  package.xml
human_aware_nav_launch/config/: rviz_config.rviz
human_aware_nav_launch/launch/: move_base.launch  navigation.launch  rviz.launch  sim_world.launch
human_aware_nav_launch/launch/sim/: playground.world
human_aware_nav_launch/maps/: playground_new.pgm  playground_new.yaml  social_sim_env.pgm  social_sim_env.yaml  turtlebot_at_home_map.pgm  turtlebot_at_home_map.yaml
people_detection/: CMakeLists.txt  package.xml
people_detection/src/: fake_detection.cpp
people_prediction/: CMakeLists.txt  package.xml
people_prediction/include/people_prediction/: constant_velocity_prediction.h
people_prediction/src/: constant_velocity_prediction.cpp
social_nav_simulation/: CMakeLists.txt  LICENSE  package.xml  todo_turtlebot3_compatible
social_nav_simulation/gazebo/models/human/: standing.config  standing.sdf  walking.config  walking.sdf
social_nav_simulation/gazebo/urdf/: human.urdf
social_nav_simulation/gazebo/worlds/: social_sim_env.world  turtlebot_at_home_no_people.world
social_nav_simulation/launch/: social_sim_env.launch  turtlebot_at_home.launch  turtlebot_playground_with_people.launch
